--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,7 @@
 * {
   margin: 0;
   font-family: Poppins;
+  box-sizing: border-box;
 }
 
 body {
@@ -10,10 +11,27 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  width: 100vw;
+  height: calc(100vh - 1rem);
+  width: calc(100vw - 1rem);
+  padding: 1rem;
 }
 
-.container {
-  padding: 1rem;
+.icon {
+  transform: translateY(0.25rem);
+}
+
+.rotate {
+  animation-name: rotate;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotateZ(0deg);
+  }
+
+  100% {
+    transform: rotateZ(360deg);
+  }
 }
